--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="boxes">
       <div class="container">
         <div class="box">
-          <img src="./img/Jabami.png">
+          <img src="./img/Jabami.PNG">
           <h3>蛇喰夢子</h3>
           <p>The master of gambler</p>
         </div>
