--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <section id="showcase">
       <div class="container">
+        <img src="./img/showcase.PNG">
         <h1></h1>
         <p></p>
       </div>
