--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Kakeguruimashou and Gambling">
     <meta name="keywords" content="Kakeguruimashou">
     <meta name="author" content="Isaac Yip">
-    <title>CCRT CMS | Welcome</title>
+    <title>Isaac's waifus | Welcome</title>
     <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
