--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
       </div>
     </section>
 
+    <h2> To-Do List </h2>
+     <ul contenteditable="true">
+        <li> Break mechanical cab driver. </li>
+        <li> Drive to abandoned factory
+        <li> Watch video of self </li>
+     </ul>
+
     <footer>
 
       <p>Isaac's waifus, Copyright &copy; 2020</p>
