--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="author" content="Isaac Yip">
     <title>Isaac's waifus | Welcome</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script type="text/javascript"
+    src = C:\Users\Isaac\Documents\GitHub\Isaacyipdeen.github.io\css\scripts.js></script>
+
   </head>
   <body>
     <header>
@@ -63,7 +66,7 @@
     </section>
 
     <h2> To-Do List </h2>
-     <ul contenteditable="true">
+     <ul id="edit" contenteditable="true">
         <li> Break mechanical cab driver. </li>
         <li> Drive to abandoned factory
         <li> Watch video of self </li>
