--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <meta name="author" content="Isaac Yip">
     <title>Isaac's waifus | Welcome</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script type="text/javascript"
-    src = C:\Users\Isaac\Documents\GitHub\Isaacyipdeen.github.io\css\scripts.js></script>
+    <script src = "C:\Users\Isaac\Documents\GitHub\Isaacyipdeen.github.io\css\scripts.js"></script>
 
   </head>
   <body>
