--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Isaac Yip">
     <title>Isaac's waifus | Welcome</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src = "C:\Users\Isaac\Documents\GitHub\Isaacyipdeen.github.io\css\scripts.js"></script>
+
 
   </head>
   <body>
@@ -70,6 +70,28 @@
         <li> Drive to abandoned factory
         <li> Watch video of self </li>
      </ul>
+     <script>
+     function clickCounter() {
+       if (typeof(Storage) !== "undefined") {
+         if (localStorage.clickcount) {
+           localStorage.clickcount = Number(localStorage.clickcount)+1;
+         } else {
+           localStorage.clickcount = 1;
+         }
+         document.getElementById("result").innerHTML = "You have clicked the button " + localStorage.clickcount + " time(s).";
+       } else {
+         document.getElementById("result").innerHTML = "Sorry, your browser does not support web storage...";
+       }
+     }
+     </script>
+     <body>
+
+<p><button onclick="clickCounter()" type="button">Click me!</button></p>
+<div id="result"></div>
+<p>Click the button to see the counter increase.</p>
+<p>Close the browser tab (or window), and try again, and the counter will continue to count (is not reset).</p>
+
+</body>
 
     <footer>
 
