--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     </header>
     <body>
 
-<iframe width="420" height="345" src="https://www.youtube.com/watch?v=gxf_zRr-UQ8">
-</iframe>
+      <iframe width="420" height="345" src="https://www.youtube.com/embed/gxf_zRr-UQ8">
+      </iframe>
 
-</body>
+    </body>
 
     <section id="showcase">
       <div class="container">
