--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       </div>
     </header>
     <body>
-
-      <iframe width="420" height="345" src="https://www.youtube.com/embed/gxf_zRr-UQ8">
-      </iframe>
-
+      <div class="container">
+        <iframe width="1000" height="345" src="https://www.youtube.com/embed/gxf_zRr-UQ8?autoplay=1">
+        </iframe>
+      </div>
     </body>
 
     <section id="showcase">
