--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
     <body>
       <div class="container">
-        <iframe width="1000" height="345" src="https://www.youtube.com/embed/gxf_zRr-UQ8?autoplay=1&mute=1">
+        <iframe width="1000" height="345" src="https://www.youtube.com/embed/gxf_zRr-UQ8?autoplay=1" frameborder="0" allow="autoplay">
         </iframe>
       </div>
     </body>
