--- a/login.html
+++ b/login.html
@@ -10,6 +10,12 @@
     <link rel="stylesheet" href="./css/test.css">
 
   </head>
+  <body>
+          <div class="marquee">
+  	<p><b>Nara is best gril!</b></p>
+  </div>
+      </body>
+
 
 
         <body>
