--- a/login.html
+++ b/login.html
@@ -11,18 +11,20 @@
 
   </head>
 
-  <div class="marquee">
+<ul>
+
+  <div class="sticky">
   	<p><b>Nara is best gril!</b></p>
   </div>
+</ul>
 
 
-
-
+<div style="padding-bottom:2000px">
         <body>
           <div class="clock"><div class="hr"><div class="strip"><div class="number">0</div><div class="number">1</div><div class="number">2</div></div><div class="strip"><div class="number">0</div><div class="number">1</div><div class="number">2</div><div class="number">3</div><div class="number">4</div><div class="number">5</div><div class="number">6</div><div class="number">7</div><div class="number">8</div><div class="number">9</div></div></div><div class="min"><div class="strip"><div class="number">0</div><div class="number">1</div><div class="number">2</div><div class="number">3</div><div class="number">4</div><div class="number">5</div></div><div class="strip"><div class="number">0</div><div class="number">1</div><div class="number">2</div><div class="number">3</div><div class="number">4</div><div class="number">5</div><div class="number">6</div><div class="number">7</div><div class="number">8</div><div class="number">9</div></div></div><div class="sec"><div class="strip"><div class="number">0</div><div class="number">1</div><div class="number">2</div><div class="number">3</div><div class="number">4</div><div class="number">5</div></div><div class="strip"><div class="number">0</div><div class="number">1</div><div class="number">2</div><div class="number">3</div><div class="number">4</div><div class="number">5</div><div class="number">6</div><div class="number">7</div><div class="number">8</div><div class="number">9</div></div></div></div>
 
         </body>
-
+</div>
 <!--<script src="C:\Users\Isaac\Documents\GitHub\Isaacyipdeen.github.io\css\scripts.js"></script>
 -->
 <script>
