--- a/login.html
+++ b/login.html
@@ -11,10 +11,11 @@
 
   </head>
 
-  <div class="marquee">
+<div class="marquee">
+  <div class="sticky">
   	<p><b>Nara is best gril!</b></p>
   </div>
-
+</div>
 
 
 <body>
