--- a/login.html
+++ b/login.html
@@ -11,9 +11,9 @@
 
   </head>
 
-<div class="marquee">
-  <div class="sticky">
-  	<p><b>Nara is best gril!</b></p>
+<div class="sticky">
+  <div class="marquee">
+  	<p><b>Nara is best gril</b></p>
   </div>
 </div>
 
