--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
           <u1>
             <li class="current"><a href="index.html">Home</a></li>
             <li><a href="login.html">Log In</a></li>
+            <li><a href="kaiji.html">Kaiji</a></li>
           </u1>
         </nav>
       </div>
