--- a/kaiji.html
+++ b/kaiji.html
@@ -21,9 +21,7 @@
 </div>
 
     </header>
-    <script>
-
-    
+    <script src="C:\Users\Isaac\Documents\GitHub\Isaacyipdeen.github.io\css\scripts.js">
     </script>
 
 
