--- a/kaiji.html
+++ b/kaiji.html
@@ -19,7 +19,21 @@
 </div>
 
     </header>
-    <script src="C:\Users\Isaac\Documents\GitHub\Isaacyipdeen.github.io\css\scripts.js">
+    <script>
+    var myIndex = 0;
+    carousel();
+
+    function carousel() {
+      var i;
+      var x = document.getElementsByClassName("mySlides");
+      for (i = 0; i < x.length; i++) {
+        x[i].style.display = "none";
+      }
+      myIndex++;
+      if (myIndex > x.length) {myIndex = 1}
+      x[myIndex-1].style.display = "block";
+      setTimeout(carousel, 2000); // Change image every 2 seconds
+    }
     </script>
 
 
