--- a/kaiji.html
+++ b/kaiji.html
@@ -13,9 +13,9 @@
     <header>
 
 <div class="w3-content w3-section" style="max-width:500px">
-  <img class="mySlides" src="./img/Jabami.PNG" style="width:100%">
-  <img class="mySlides" src="./img/Kirari.PNG" style="width:100%">
-  <img class="mySlides" src="./img/Saotome.PNG" style="width:100%">
+  <img class="mySlides" src="./img/nara.JPG" style="width:100%">
+  <img class="mySlides" src="./img/nara 2.JPG" style="width:100%">
+  <img class="mySlides" src="./img/nara 3.JPG" style="width:100%">
 </div>
 
     </header>
