--- a/kaiji.html
+++ b/kaiji.html
@@ -15,7 +15,7 @@
 <div class="w3-content w3-section" style="max-width:500px">
   <img class="mySlides" src="./img/nara.JPG" style="width:100%">
   <img class="mySlides" src="./img/nara 2.JPG" style="width:100%">
-  <img class="mySlides" src="./img/nara 3.JPG" style="width:100%">
+  <img class="mySlides" src="./img/nara 3.jpg" style="width:100%">
 </div>
 
     </header>
