--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Kakeguruimashou and Gambling">
     <meta name="keywords" content="Kakeguruimashou">
     <meta name="author" content="Isaac Yip">
@@ -171,7 +171,7 @@ function drawHand(ctx, pos, length, width) {
 
     <footer>
 
-      <p>Isaac's waifus, Copyright &copy; 2020</p>
+      <p>Isaac Yip, Copyright &copy; 2021</p>
     </footer>
 
   </body>
