--- a/io_reg.html
+++ b/io_reg.html
@@ -1,2 +1,3 @@
 
-<head> <script language="javascript" type="text/javascript">alert("Welcome to Name of Your Company")</script></head><font face="TimesNewRoman"><span style="font-size: 10pt; text-decoration: none"></span></a></font>
+<head> <script language="javascript" type="text/javascript">alert("Welcome peasants. This is your King")
+</script></head><font face="TimesNewRoman"><span style="font-size: 10pt; text-decoration: none"></span></font>
