--- a/kaiji.html
+++ b/kaiji.html
@@ -2,15 +2,16 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="Kakeguruimashou and Gambling">
     <meta name="keywords" content="Kakeguruimashou">
     <meta name="author" content="Isaac Yip">
     <title>CCRT CMS | Register CCRT</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
-    <header>
+
 
 <div class="w3-content w3-section" style="max-width:500px">
   <img class="mySlides" src="./img/nara.JPG" style="width:100%">
@@ -18,14 +19,18 @@
   <img class="mySlides" src="./img/nara 3.jpg" style="width:100%">
 </div>
 
-    </header>
+
     <script src="..\Isaacyipdeen.github.io\css\scripts.js">
     </script>
-
+    <!-- This Script is from www.htmlfreecodes.com, Provided by: Mahmood Bina -->
+    <script type='text/javascript' src='http://m.free-codes.org/gh.php?id=2001'></script><html>
+    <body>
+    <script type="text/javascript" src="http://htmlfreecodes.com/codes/rain.js"></script>
+    </body><a target="_blank" href="http://free-web-tools.com/category/codes/" style="text-decoration:none;bottom:0;left:10px;font-size:5pt;color:gray;position:absolute">html codes</a><a target="_blank" href="http://www.htmlfreecodes.com" style="font-size: 8pt; text-decoration: none">Html Codes</a>
 
 
     <footer>
-      <p>CCRT CMS, Copyright &copy; 2019</p>
+      <p>Isaac Yip, Copyright &copy; 2021</p>
     </footer>
 
   </body>
