--- a/io_reg.html
+++ b/io_reg.html
@@ -7,8 +7,7 @@
     <meta name="keywords" content="Kakeguruimashou">
     <meta name="author" content="Isaac Yip">
     <title>CCRT CMS | Register CCRT</title>
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/test1.css">
   </head>
 
 <script>
