--- a/io_reg.html
+++ b/io_reg.html
@@ -23,7 +23,8 @@
       <div class="single-toggle toggle">SINGLE</div>
     </div>
   </body>
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js">
+</script>
 <script>
 var makeItRain = function () {
   //clear out everything
