--- a/rain.html
+++ b/rain.html
@@ -27,3 +27,10 @@
 </script>
 <script src="..\Isaacyipdeen.github.io\css\rain.js">
 </script>
+
+
+<div class="sticky">
+  <div class="marquee">
+  	<p><b>Nara is best gril</b></p>
+  </div>
+</div>
