--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Kakeguruimashou">
     <meta name="author" content="Isaac Yip">
     <title>CCRT CMS | Log In</title>
-    <link rel="stylesheet" href="./css/test.css">
+    <link rel="stylesheet" href="./css/login.css">
 
   </head>
 
