--- a/tracking_list.html
+++ b/tracking_list.html
@@ -35,23 +35,22 @@
 
             <body>
               Working memory: Maintenance of information in an activated state over brief periods of time (Atkinson & Shiffrin, 1968)
-Not a one-dimensional construct
-
-Baddeley's multicomponent model of working memory:
-1) Central Executive:
--Direct attention to relevant information; suppresses irrelevant information
--Coordination of the slave systems
-
-2) Phonological Loop:
--Consists of the articulatory loop and the acoustic store (or phonological store)
--Acoustic store with auditory memory traces that are subject to rapid decay
--Articulatory loop can revive the memory traces
-
-3) Visuo-spatial sketchpad. Processes visual and spatial information
-4) Episodic Buffer
--Acts as a buffer store between components of working memory, perception and long-term memory.
--Allows individuals to imagine new concepts
--Maintains a sense of time
+              Not a one-dimensional construct. Baddeley's multicomponent model of working memory:
+              <br>1) Central Executive:
+              <br>-Direct attention to relevant information; suppresses irrelevant information
+              <br>-Coordination of the slave systems
+              <p>
+              2) Phonological Loop:
+              <br>-Consists of the articulatory loop and the acoustic store (or phonological store)
+              <br>-Acoustic store with auditory memory traces that are subject to rapid decay
+              <br>-Articulatory loop can revive the memory traces
+              <p>
+              3) Visuo-spatial sketchpad. Processes visual and spatial information
+              <p>
+              4) Episodic Buffer
+              <br>-Acts as a buffer store between components of working memory, perception and long-term memory.
+              <br>-Allows individuals to imagine new concepts
+              <br>-Maintains a sense of time
 
 
             </body>
