--- a/tracking_list.html
+++ b/tracking_list.html
@@ -64,10 +64,38 @@
               <h1>This Study</h1>
               Aims to find out how 42 hr of TSD will affect the component processes with regards to maintaining information in the WM in young healthy adults.
               <br>To do this, they came up with a computer-based WM test to measure 3 component processes of WM: attention, WM span, and efficiency of encoding into episodic memory
-              <h1>Hypothesis</h1>: All 3 components will not be equally affected; attention will be most affected, encoding least affected. Individual differences exist.
-              
-
-
+              <h1>Hypothesis</h1>All 3 components will not be equally affected; attention will be most affected, encoding least affected. Individual differences exist.
+              <h1>Procedure</h1>
+              Participants were recruited via advertisement in San Diego area
+              <br>>18 women. 22 men. 19-39 years old
+              <br>>Were asked to stop all alcohol and caffeine 3 days before their lab stay
+              <br>>Maintained a regular sleep schedule one week before (sleep diaries and actigraph)
+              <br>>Spent 6 experimental nights and 5 days, including 64hr of TSD in lab
+              <br>>Can move about and do activities except strenuous exercise, exposure to sunlight, napping, consumption of stimulants. Monitored 24 hrs, administered cognitive tasks every 2 hours
+              <br>>Took the verbal WM test while well rested and during TSD
+              <hr>
+              <h1>Verbal WM Test</h1>
+              After subjects view a set of loading stimuli, the test alternates between test and study conditions
+              <br>Subjects view a 3 secs presentation of a single, pronounceable five-letter nonsense word
+              <br>During the test conditions, target is presented along with 3 similar nonsense words. Their task is to identify the nonsense word they have previously seen. They are not told how long they need to hold the information for. Pseudorandomized lags (0: item just studied, 4: item studied 4 trials before)
+              <br>The computational model used estimated 3 parameters: Attention, displacement (probability that a new item displace old item in the WM); reciprocal of this represents WM span, and episodic encoding.
+              <hr>
+              <h1>Results</h1>
+              Each of the parameters is being manipulated at different lags. The shape of the curve is very different, showing how TSD affects different component processes of WM differently, as hypothesized.
+              <br>For lag 0 for all parameters, only the attention parameter when manipulated shows a decline in performance.
+              Reducing DIS affects the performance the most after lag 0.
+              <br>Note that these do not represent individual differences. Some people are greatly affected by TSD while some show improvements after TSD.
+              <hr>
+              <h1>Limitations and Implications</h1>
+              This study only tested the verbal domain of WM. Results might differ for spatial or other types of tasks.
+              <br>Secondly, different component processes of the WM is affected to a different degree across individuals.
+              <br>There might be a possibility that participants change their strategies to account for the degradation, for example, only rehearsing a few words or encoding a few words.
+              <p>
+              More and more people faces sleep deprivation in their line of work. It is important to find individual’s strength and assign them tasks that engages the WM component processes that isn’t too severely affected by TSD.
+              <br>Findings can also aid in future research when it comes to the neuropsychiatric population, such as schizophrenias, dementia and mood disorders, where deficits in WM memory is found.
+              <hr>
+              <h1>References<h1>
+              Turner, T. H., Drummond, S. P., Salamat, J. S., & Brown, G. G. (2007). Effects of 42 hr of total sleep deprivation on component processes of verbal working memory. Neuropsychology, 21(6), 787-795. https://doi.org/10.1037/0894-4105.21.6.787
 
 
 
