--- a/sd.html
+++ b/sd.html
@@ -92,7 +92,7 @@
               <br>There might be a possibility that participants change their strategies to account for the degradation, for example, only rehearsing a few words or encoding a few words.
               <p>
               More and more people faces sleep deprivation in their line of work. It is important to find individual’s strength and assign them tasks that engages the WM component processes that isn’t too severely affected by TSD.
-              <br>Findings can also aid in future research when it comes to the neuropsychiatric population, such as schizophrenias, dementia and mood disorders, where deficits in WM memory is found.
+              <br>Findings can also aid in future research when it comes to the neuropsychiatric population, such as schizophrenias, dementia and mood disorders, where deficits in WM is found.
               <hr>
               <h1>References<h1>
               Turner, T. H., Drummond, S. P., Salamat, J. S., & Brown, G. G. (2007). Effects of 42 hr of total sleep deprivation on component processes of verbal working memory. Neuropsychology, 21(6), 787-795. https://doi.org/10.1037/0894-4105.21.6.787
